unpackaged/main/default/objects/Inquiry__c/Inquiry__c.object-meta.xml
<CustomObject>
    <label>Inquiry</label>
    <nameField>
        <displayFormat>Inquiry-{0000000000}</displayFormat>
        <label>Inquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>