unpackaged/main/default/objects/Inquiry__c/fields/Counselor__c.field-meta.xml
<CustomField>
    <fullName>Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>