unpackaged/main/default/objects/Inquiry__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Inquiries</relationshipLabel>
    <relationshipName>Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>