unpackaged/main/default/objects/Inquiry__c/fields/High_School__c.field-meta.xml
<CustomField>
    <fullName>High_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>High School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inquiries (High School)</relationshipLabel>
    <relationshipName>High_School_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>