unpackaged/main/default/objects/Inquiry__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Inquiries</relationshipLabel>
    <relationshipName>Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>