unpackaged/main/default/objects/Inquiry__c/fields/Other_High_School_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_High_School_Name__c</fullName>
    <label>Other High School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>