unpackaged/main/default/objects/Inquiry__c/fields/Page_URL_First_Touch__c.field-meta.xml
<CustomField>
    <fullName>Page_URL_First_Touch__c</fullName>
    <description>The URL of the first paid ad page that the person who submitted the inquiry has visited</description>
    <label>Page URL First Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>