unpackaged/main/default/objects/Inquiry__c/fields/Parent_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Phone_Number__c</fullName>
    <label>Parent Phone Number</label>
    <type>Phone</type>
</CustomField>