unpackaged/main/default/objects/Inquiry__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospective Student</fullName>
            </value>
            <value>
                <fullName>Prospective Parent</fullName>
            </value>
            <value>
                <fullName>High School Counselor</fullName>
            </value>
            <value>
                <fullName>Independent Educational Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>