unpackaged/main/default/objects/Inquiry__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Indicates where the inquiry has been sourced from</description>
    <label>Source</label>
    <length>254</length>
    <type>Text</type>
</CustomField>