unpackaged/main/default/objects/Inquiry__c/fields/UTM_Content_Last_Touch__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content_Last_Touch__c</fullName>
    <description>Used to track UTM parameter data on inquiries that were submitted via a link on a paid ad. This is the most recent UTM parameter prior to the inquiry being submitted.</description>
    <label>UTM Content Last Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>