unpackaged/main/default/objects/Inquiry__c/fields/UTM_Medium_First_Touch__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium_First_Touch__c</fullName>
    <description>Used to track UTM parameter data on inquiries that were submitted via a link on a paid ad. This is the first UTM parameter ever captured for the person who submitted the inquiry.</description>
    <label>UTM Medium First Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>