unpackaged/main/default/objects/Inquiry__c/recordTypes/Parent.recordType-meta.xml
<RecordType>
    <fullName>Parent</fullName>
    <active>true</active>
    <label>Parent</label>
</RecordType>