unpackaged/main/default/objects/Inquiry__c/recordTypes/Request_for_Information.recordType-meta.xml
<RecordType>
    <fullName>Request_for_Information</fullName>
    <active>true</active>
    <label>Request for Information</label>
</RecordType>