unpackaged/main/default/objects/Inquiry__c/recordTypes/Started_Application.recordType-meta.xml
<RecordType>
    <fullName>Started_Application</fullName>
    <active>true</active>
    <label>Started Application</label>
</RecordType>