unpackaged/main/default/objects/Inquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Persona__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Parent_First_Name__c</columns>
    <columns>Parent_Last_Name__c</columns>
    <columns>Parent_Email__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>