unpackaged/main/default/objects/Inquiry__c/listViews/Bold_org_Inquiries.listView-meta.xml
<ListView>
    <fullName>Bold_org_Inquiries</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>Source__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UTM_Source_Last_Touch__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UTM_Source_Last_Touch__c</field>
        <operation>equals</operation>
        <value>bold.org</value>
    </filters>
    <label>Bold.org Inquiries</label>
    <sharedTo>
        <role>COO</role>
        <role>Enrollment_Operations</role>
        <role>Marketing</role>
    </sharedTo>
</ListView>