unpackaged/main/default/objects/Inquiry__c/listViews/Inquiries_Imported_by_Marta.listView-meta.xml
<ListView>
    <fullName>Inquiries_Imported_by_Marta</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UTM_Source_Last_Touch__c</columns>
    <columns>Source__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>marta</value>
    </filters>
    <label>Inquiries Imported by Marta</label>
</ListView>