unpackaged/main/default/objects/Inquiry__c/listViews/Inquiries_Today.listView-meta.xml
<ListView>
    <fullName>Inquiries_Today</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Inquiries Today</label>
</ListView>