unpackaged/main/default/objects/Inquiry__c/listViews/RAC_Generated_Inquiries.listView-meta.xml
<ListView>
    <fullName>RAC_Generated_Inquiries</fullName>
    <columns>NAME</columns>
    <columns>Counselor__c</columns>
    <columns>High_School__c</columns>
    <columns>Event__c</columns>
    <columns>Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Counselor__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>RAC Generated Inquiries</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>